--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hana-cli",
-  "version": "2.202105.8",
+  "version": "2.202105.10",
   "description": "HANA Developer Command Line Interface",
   "main": "index.js",
   "bin": {
@@ -37,9 +37,10 @@
     "dotenv": "^10.0.0",
     "easy-table": "1.1.1",
     "express": "^4.17",
+    "js-convert-case": "^4.1.2",
     "json-to-pretty-yaml": "^1.2.2",
     "latest-version": "^5.1",
-    "marked": "^2.0.5",
+    "marked": "^2.0.6",
     "marked-terminal": "^4.1.1",
     "node-xlsx": "^0.16.1",
     "node-zip": "^1.1",
@@ -65,6 +66,6 @@
   "devDependencies": {
     "@types/yargs": "^17.0.0",
     "eslint": "^7.27.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
